--- a/Components/Account/Pages/Manage/Index.razor
+++ b/Components/Account/Pages/Manage/Index.razor
@@ -18,9 +18,18 @@
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <input type="text" value="@username" id="username" class="form-control"
+                <input type="text" value="@(username ?? "")" id="username" class="form-control"
                     placeholder="Choose your username." disabled />
                 <label for="username" class="form-label">Username</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" value="@(user?.FullName ?? "")" id="fullname" class="form-control" disabled />
+                <label for="fullname" class="form-label">Full Name</label>
+            </div>
+            <div class="form-floating mb-3">
+                <SfTextBox Placeholder="Daily Hours" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.DailyHours" id="Input.DailyHours" />
+                <ValidationMessage For="() => Input.DailyHours" class="text-danger small" />
             </div>
             <div class="form-floating mb-3">
                 <SfTextBox Placeholder="Phone Number" CssClass="e-outline"
@@ -47,9 +56,14 @@
     {
         user = await UserAccessor.GetRequiredUserAsync(HttpContext);
         username = await UserManager.GetUserNameAsync(user);
+        
         phoneNumber = await UserManager.GetPhoneNumberAsync(user);
-
+        Console.WriteLine($"Daily hours: {user.DailyHours}");
+        Console.WriteLine(user.FullName);
         Input.PhoneNumber ??= phoneNumber;
+        Input.DailyHours ??= user.DailyHours;
+
+
     }
 
     private async Task OnValidSubmitAsync()
@@ -62,6 +76,15 @@
                 throw new InvalidOperationException("Failed to update phone number.");
             }
         }
+        if (Input.DailyHours != user.DailyHours)
+        {
+            user.DailyHours = Input.DailyHours;
+            var updateResult = await UserManager.UpdateAsync(user);
+            if (!updateResult.Succeeded)
+            {
+                throw new InvalidOperationException("Failed to update daily hours.");
+            }
+        }
     }
 
     private sealed class InputModel
@@ -69,5 +92,11 @@
         [Phone]
         [Display(Name = "Phone number")]
         public string PhoneNumber { get; set; }
-    }
+
+        [Display(Name = "Daily Hours")]
+        [RegularExpression(@"^([0-9]|1[0-9]|2[0-4])$", ErrorMessage = "Daily hours must be between 0 and 24")]
+        public string DailyHours { get; set;}
+
+        }
+    
 }
