style: redesign UI with modern aesthetics and improved responsiveness

--- a/Components/Account/Pages/Manage/Index.razor
+++ b/Components/Account/Pages/Manage/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/Account/Manage/Index"
+@page "/Account/Manage/Index"
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
