--- a/Components/Account/Shared/ManageLayout.razor
+++ b/Components/Account/Shared/ManageLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 @layout FreelanceManager.Components.Layout.MainLayout
 
 <h2 class="text-center text-color-purple fw-semibold py-3">Account Management</h2>
