--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,45 +1,49 @@
-﻿@implements IDisposable
+@implements IDisposable
 
 @inject NavigationManager NavigationManager
 
-<div class="navbar">
-    <div class="flex justify-content-center align-items-center w-100">
-        <img src="assets/logo.png" alt="FreelanceManager Logo" class="border-radius-5" style="max-width: 100px;" />
+<div class="sidebar-header">
+    <div class="logo-container">
+        <img src="assets/logo.svg" alt="FreelanceManager Logo" class="logo" />
     </div>
 </div>
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link fs-14 fb-bold" href="home" Match="NavLinkMatch.All">
-                        <span class="e-icons e-home mr-8 fs-18"></span> Home
+                    <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
+                        <i class="fas fa-home nav-icon"></i>
+                        <span class="nav-text">Home</span>
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link fs-14 fb-bold" href="projects">
-                        <span class="e-icons e-folder mr-10 fs-16"></span> Projects
+                    <NavLink class="nav-link" href="projects">
+                        <i class="fas fa-project-diagram nav-icon"></i>
+                        <span class="nav-text">Projects</span>
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link fs-14 fb-bold" href="Clients">
-                        <span class="e-icons e-people mr-10 fs-16"></span> Clients
+                    <NavLink class="nav-link" href="Clients">
+                        <i class="fas fa-users nav-icon"></i>
+                        <span class="nav-text">Clients</span>
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link fs-14 fb-bold" href="Account/Manage/Index">
-                        <span class="e-icons e-settings mr-10 fs-16"></span> Settings
+                    <NavLink class="nav-link" href="Account/Manage/Index">
+                        <i class="fas fa-cog nav-icon"></i>
+                        <span class="nav-text">Settings</span>
                     </NavLink>
                 </div>
-                <div class="nav-item px-3">
+                <div class="nav-item px-3 mt-auto">
                     <form action="Account/Logout" method="post">
                         <AntiforgeryToken />
                         <input type="hidden" name="ReturnUrl" value="@currentUrl" />
-                        <button type="submit" class="nav-link fs-14 fb-bold">
-                            <span class="e-icons e-arrow-left mr-10 fs-16"></span> Logout
+                        <button type="submit" class="nav-link logout-btn">
+                            <i class="fas fa-sign-out-alt nav-icon"></i>
+                            <span class="nav-text">Logout</span>
                         </button>
                     </form>
                 </div>
