fix: update login placeholder text and increase logo size in navigation menu

--- a/Components/Account/Pages/Login.razor
+++ b/Components/Account/Pages/Login.razor
@@ -52,7 +52,7 @@
                     
                     <!-- Inputs com espaçamento melhorado -->
                     <div class="input-container">
-                        <SfTextBox Placeholder='33' CssClass="login-input" @bind-Value="Input.UserName" id="Input.Username"
+                        <SfTextBox Placeholder='Username' CssClass="login-input" @bind-Value="Input.UserName" id="Input.Username"
                             FloatLabelType="FloatLabelType.Always">
                         </SfTextBox>
                     </div>
@@ -60,7 +60,7 @@
                     <div class="input-container">
                         <div class="password-container">
                             <SfTextBox Placeholder='Password' Type="InputType.Password" CssClass="login-input"
-                                FloatLabelType="FloatLabelType.Always" @bind-Value="Input.Password" id="passwordInput">
+                                FloatLabelType="FloatLabelType.Always" @bind-Value="Input.Password" id="Input.Password">
                             </SfTextBox>
                             <button type="button" class="password-toggle" @onclick="TogglePasswordVisibilityJS">
                                 <i id="passwordIcon" class="fas fa-eye"></i>
